jascii.html: Specify a document charset.
Signed-off-by: aszlig <aszlig@redmoonstudios.org>

--- a/jascii.html
+++ b/jascii.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>jascii</title>
+        <meta charset="UTF-8">
         <script type="text/javascript" src="jascii.js"></script>
         <style type="text/css" media="all">
             body { margin: 0; padding: 0; }
