Create a new macro-based Application interface.
This closes issue #2, although the implementation differs quite a bit from the
proposed one:

We basically have the interface hase.Application, which just makes sure the API
user doesn't forget about mandatory functions.

The interface's builder macro will then populate the interface with the contents
from complex_fields in AppBuilder.create_basefields() and if there are any
collisions, it will notify the user by throwing an exception.

Our implementation actually has two ways to be called:

 * With a pre-existing canvas element using YourApplication.from_canvas().
 * Using YourApplication as a -main class and thus filling the whole page.

Of course there is room for improvement, but for now, this should simplify
building basic HASE applications a *lot*.

Signed-off-by: aszlig <aszlig@redmoonstudios.org>

--- a/example/index.html
+++ b/example/index.html
@@ -1,19 +1,4 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>hase</title>
-        <meta charset="UTF-8">
-        <script type="text/javascript" src="hase.js"></script>
-        <style type="text/css" media="all">
-            body { margin: 0; padding: 0; }
-            #canvas { position: absolute; }
-        </style>
-    </head>
-    <body>
-        <div id="content">
-            <canvas id="canvas">
-            Sorry, but your browser doesn't support the HTML5 canvas element!
-            </canvas>
-        </div>
-    </body>
-</html>
+<title>HASE example</title>
+<meta charset="UTF-8">
+<script type="text/javascript" src="hase.js"></script>
