example: Use the name "example" consistently.
We used "hase.js" as the JS output and Main as our main class, so this should
rename everything to the example or Example.

Signed-off-by: aszlig <aszlig@redmoonstudios.org>

--- a/example/example.html
+++ b/example/example.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <title>HASE example</title>
 <meta charset="UTF-8">
-<script type="text/javascript" src="hase.js"></script>
+<script src="example.js"></script>
